crates/ars-components/src/specialized/image_cropper/snapshots/ars_components__specialized__image_cropper__tests__snapshot_root_dragging.snap
---
source: crates/ars-components/src/specialized/image_cropper/mod.rs
expression: "snapshot_attrs(&Fixture\n{ state: State::Dragging, ..Default::default() }.api().root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "image-cropper",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "dragging",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Crop image",
            ),
        ),
        (
            Aria(
                RoleDescription,
            ),
            String(
                "cropper",
            ),
        ),
        (
            Id,
            String(
                "cropper",
            ),
        ),
        (
            Role,
            String(
                "application",
            ),
        ),
    ],
    styles: [],
}
