crates/ars-components/src/specialized/image_cropper/snapshots/ars_components__specialized__image_cropper__tests__snapshot_rotation_slider.snap
---
source: crates/ars-components/src/specialized/image_cropper/mod.rs
expression: "snapshot_attrs(&Fixture\n{\n    crop: CropArea { rotation: 45.0, ..CropArea::default() },\n    ..Default::default()\n}.api().rotation_slider_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "rotation-slider",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "image-cropper",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Rotation",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "180",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "-180",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "45",
            ),
        ),
        (
            Role,
            String(
                "slider",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
